# trytond-issue12900

./: Readme.md  pyproject.toml  tox.ini
src/issue12900/: __init__.py  tryton.cfg
src/issue12900.dist-info/: METADATA  entry_points.txt
